[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/pool.png" type="Texture" id=1]
[ext_resource path="res://objects/Pool.gd" type="Script" id=2]
[ext_resource path="res://objects/pool_idle.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 18 )

[sub_resource type="Animation" id=2]
resource_name = "pool_idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[node name="Pool" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 0 )
z_index = 50
texture = ExtResource( 1 )
hframes = 4
region_rect = Rect2( 0, 0, 1152, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/pool_idle = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -72, 0 )
z_index = 50
texture = ExtResource( 1 )
hframes = 4
region_rect = Rect2( 0, 0, 1152, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
anims/pool_idle = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 120, 0 )
z_index = 50
texture = ExtResource( 1 )
hframes = 4
region_rect = Rect2( 0, 0, 1152, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite3"]
anims/pool_idle = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 215, 0 )
z_index = 50
texture = ExtResource( 1 )
hframes = 4
region_rect = Rect2( 0, 0, 1152, 48 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite4"]
anims/pool_idle = SubResource( 2 )

[node name="RoughTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Pool_body_entered"]
[connection signal="timeout" from="RoughTimer" to="." method="_on_RoughTimer_timeout"]
